--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -62,8 +62,9 @@ spec:
       claims:
         extra:
           - "NAVident"
-  envFrom:
-    - secret: syfoperson-redis-password
+  redis:
+    - instance: cache
+      access: readwrite
   observability:
     autoInstrumentation:
       enabled: true
@@ -77,8 +78,6 @@ spec:
       value: "prod-fss.pdl.pdl-api"
     - name: PDL_URL
       value: "https://pdl-api.prod-fss-pub.nais.io/graphql"
-    - name: REDIS_HOST
-      value: "syfoperson-redis.teamsykefravr.svc.cluster.local"
     - name: SKJERMEDEPERSONERPIP_CLIENT_ID
       value: "prod-gcp.nom.skjermede-personer-pip"
     - name: SKJERMEDEPERSONERPIP_URL
