IS-3066: Use Valkey-cache

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -60,7 +60,7 @@ spec:
       claims:
         extra:
           - "NAVident"
-  redis:
+  valkey:
     - instance: cache
       access: readwrite
   observability:
