--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -61,7 +61,7 @@ spec:
       claims:
         extra:
           - "NAVident"
-  redis:
+  valkey:
     - instance: cache
       access: readwrite
   observability:
