--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -68,6 +68,9 @@ spec:
     autoInstrumentation:
       enabled: true
       runtime: java
+    logging:
+      destinations:
+        - id: elastic
   env:
     - name: KRR_CLIENT_ID
       value: "prod-gcp.team-rocket.digdir-krr-proxy"
