--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -69,6 +69,7 @@ spec:
       runtime: java
     logging:
       destinations:
+        - id: loki
         - id: elastic
   env:
     - name: KRR_CLIENT_ID
